--- a/src/assets/sass/components/_card.sass
+++ b/src/assets/sass/components/_card.sass
@@ -1,10 +1,10 @@
 .card
-  height: 43rem
+  height: 40rem
   // padding: 10rem
   @include card-styles
 
   @include respond(tab-port)
-    height: 36rem
+    height: 37rem
 
   &__heading
     font-size: 3rem
