--- a/src/assets/sass/pages/_home.sass
+++ b/src/assets/sass/pages/_home.sass
@@ -115,10 +115,11 @@
     left: 50%
     transform: translate(-50%, -50%)
     list-style: none
+    margin: 0
 
   &__credit
     margin-bottom: 0
 
   &__item
     display: inline
-    margin: 0 5rem
+    margin: 0 3rem
